--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,5 +8,6 @@
   <body>
     <h1>Bienvenido a <%= title %></h1>
     <p>Aquí podrás crear tus propios juegos de preguntas!!</p>
+    <p><a href="/quizes/question">Comience a jugar</a></p>
   </body>
 </html>
