--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,16 @@
 <head>
   <meta charset="utf-8">
   <title>Preguntas</title>
-  <link rel="stylesheet" href=''/stylesheets/style.css'/>
+  <link rel="stylesheet" href='/stylesheets/style.css'/>
+  <link rel='stylesheet'
+        type='text/css'
+        media='only screen and (min-width: 530px) and (min-device-width: 481px)'
+        href='/stylesheets/wide.css' />
+  <link rel='stylesheet'
+        type='text/css'
+        media='only screen and (max-width: 480px)'
+        href='/stylesheets/smartphone.css' />
+
 </head>
 
 <body>
@@ -15,6 +24,7 @@
       <nav class="main" id="n1" role="navigation">
         <span><a href="/">Inicio</a></span>
         <span><a href="/quizes/question">Preguntas</a></span>
+        <span><a href="/author">Créditos</a></span>
       </nav>
 
       <section class="main" id="s1">
@@ -24,6 +34,8 @@
       <footer class="main" id="f1">
         <a href="http://es.wikipedia.org/wiki/Quiz">
           Qué es un quiz</a>
+        <a href="https://github.com/mplmiriadax/quiz-mpl">
+          Repositorio Github
       </footer>
   </div>
 </body>
