--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,3 @@
 <h1>Bienvenido a <%= title %></h1>
 <p>Aquí podrás crear tus propios juegos de preguntas!!</p>
-<p><a href="/quizes/question">Comience a jugar</a></p>
+<p><a href="/quizes">Comience a jugar</a></p>
