--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,3 +1,3 @@
     <h2>Quiz - MPL: El juego de las preguntas</h2>
     <p><%= respuesta %></p>
-    <a href="/quizes/question"> Intentelo otra vez </a>
+    <a href="/quizes/<%= quiz.id %>"> Volver </a>
