--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,3 +1,7 @@
+<form method="get" action="/quizes">
+<input type="text" id="search" name="search" placeholder="Texto a buscar"/>
+  <button type="submit">Buscar</button>
+</form>
 <table>
 <% var i; for (i=0; i< quizes.length; i++){ %>
   <tr>
